<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LangLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LLSub5"
        android:layout_width="410dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LLSub5.1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/LLSub5.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/LanguageName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="12dp"
                android:text="@string/LanguageName"
                android:textAlignment="center"
                android:textSize="7pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/EnterLanguage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/space38"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/EnterLanguage"
                app:layout_constraintEnd_toStartOf="@+id/EnterLanguage"
                app:layout_constraintStart_toEndOf="@+id/LanguageName"
                app:layout_constraintTop_toTopOf="@+id/EnterLanguage" />

            <EditText
                android:id="@+id/EnterLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/FeedbackLanguageHint"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/LanguageName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:id="@+id/space36"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/LLSub5.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLSub5.1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LLSub5.2"
            android:layout_width="411dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toTopOf="@id/LLSub5.3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLSub5.1">

            <TextView
                android:id="@+id/LangExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LanguageExperience"
                android:textAlignment="center"
                android:textSize="7pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/EnterExperience"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:id="@+id/space5.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/EnterExperience"
                app:layout_constraintStart_toEndOf="@id/LangExp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/EnterExperience"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/FeedbackExpHint"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/space5.2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:id="@+id/space37"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="47dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/LLSub5.3"
            app:layout_constraintVertical_bias="0.38" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LLSub5.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/LLSub5.4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLSub5.2">

            <CheckBox
                android:id="@+id/Proficiency1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LangProf1"
                app:layout_constraintBaseline_toBaselineOf="@+id/Proficiency2"
                app:layout_constraintEnd_toStartOf="@+id/Proficiency2"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/Proficiency2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/LangProf2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/Proficiency3"
                app:layout_constraintStart_toEndOf="@+id/Proficiency1" />

            <CheckBox
                android:id="@+id/Proficiency3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/LangProf3"
                app:layout_constraintBaseline_toBaselineOf="@+id/Proficiency2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Proficiency2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/LLSub5.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RemoveLanguage"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LLSub5.3"
            tools:layout_constraintTop_toBottomOf="@id/LLsub5.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>